# engine

./: .gitignore  .gitmodules  Astar_8hpp_source.html  AudioAPI_8h_source.html  AudioAPI_8hpp_source.html  AudioEngineAdapter_8hpp_source.html  AudioEngine_8hpp_source.html  AudioFile_8h_source.html  AudioType_8h_source.html  BodyHandlerAPI_8hpp_source.html  BodyHandler_8hpp_source.html  BodyType_8hpp_source.html  Box2DPhysicsEngineAdapter_8hpp_source.html  Box2dDrawDebug_8hpp_source.html  CMakeLists.txt  ComponentFactory_8hpp_source.html  ContactHandler_8hpp_source.html  ContactListener_8hpp_source.html  Doxyfile  EngineAudioAPI_8hpp_source.html  EngineInputAPI_8hpp_source.html  EnginePhysicsAPI_8hpp_source.html  EngineRenderingAPI_8hpp_source.html  EngineRenderingAdapter_8h_source.html  EngineRenderingAdapter_8hpp_source.html  EngineWindowAPI_8hpp_source.html  Engine_8hpp_source.html  EntityXMLParser_8hpp_source.html  Event_8h_source.html  ExplosionCrate_8hpp_source.html  InputAPI_8hpp_source.html  InputEngineAdapter_8hpp_source.html  Input_8hpp_source.html  KeyMap_8hpp_source.html  LevelParserAPI_8hpp_source.html  LevelXMLParser_8hpp_source.html  Level_8hpp_source.html  Main.cpp  MenuParserAPI_8hpp_source.html  MenuParser_8hpp_source.html  (+679 more)
.github/: pull_request_template.md  release.yml
.github/workflows/: codeql-analysis.yml  documentation.yml  linux.yml  main.yml  release.yml  windows.yml
.metals/: metals.h2.db
API/: RPosition.hpp  RTransform.hpp
API/Audio/: AudioAPI.cpp  AudioAPI.h  AudioAPI.hpp  EngineAudioAPI.cpp  EngineAudioAPI.hpp
API/Engine/: EngineWindowAPI.cpp  EngineWindowAPI.hpp  WindowAPI.hpp
API/Helpers/: Vector2.hpp
API/Input/: EngineInputAPI.cpp  EngineInputAPI.hpp  InputAPI.hpp
API/Physics/: BodyHandlerAPI.hpp  EnginePhysicsAPI.hpp  PhysicsAPI.hpp
API/Rendering/: EngineRenderingAPI.cpp  EngineRenderingAPI.hpp  RenderingAPI.hpp
API/XMLParser/: LevelParserAPI.cpp  LevelParserAPI.hpp  MenuParserAPI.cpp  MenuParserAPI.hpp  menu_parser_api.cpp  menu_parser_api.hpp
Engine/: Astar.cpp  Astar.hpp  Engine.cpp  Engine.hpp  Entity.cpp  Entity.hpp  Event.h  Level1.cpp  Level1.hpp  Main.cpp  Vector2.hpp
Engine/Audio/: AudioFile.cpp  AudioFile.h  AudioType.h  SoundType.h
Engine/Helpers/: Event.h  Vector2.hpp
Engine/Input/: Input.hpp  InputEngine.hpp  KeyMap.hpp
Engine/Managers/: ResourceManager.cpp  ResourceManager.hpp
Engine/Physics/: BodyHandler.cpp  BodyHandler.hpp  BodyType.hpp  Box2DPhysicsEngineAdapter.hpp  Box2dPhysicsEngineAdapter.cpp  ContactHandler.hpp  ContactListener.hpp  PhysicsEngineAdapter.hpp  b2_user_settings.h
Engine/Rendering/: Level.cpp  Level.hpp  SpriteSheet.cpp  SpriteSheet.hpp  Spritesheet.cpp  Spritesheet.hpp  TMXLevel.cpp  TMXLevel.hpp  (+4 more)
Research/: CMakeLists.txt  Main.cpp
Resources/: LevelCharlie.tmx  Overworld.tsx  example.XML  example.tmx  untitled.tmx
SDL&Box2D-Research/: Main.cpp
SDL-Research/: .gitignore  CMakeLists.txt  Main.cpp  SDL2Test.cbp
SDL-Research/.cmake/api/v1/reply/: cache-v2-bcf321ff67bb1d3d2d6d.json  cmakeFiles-v1-2ae12c5e39b6a1411710.json  codemodel-v2-a946a2591107e654e32c.json  index-2020-09-15T21-54-08-0463.json  target-SDL2Test-Debug-4ba2c0a13c15097a11e2.json
builds/: NightByte
cmake/: FindXsd.cmake  xsd-config.cmake
html/: AudioAPI_8h_source.html  AudioEngineAdapter_8hpp_source.html  AudioType_8h_source.html  BulletComponent_8hpp_source.html  CharacterComponent_8hpp_source.html  Component_8hpp_source.html  ContactHandler_8hpp_source.html  EnginePhysicsAPI_8hpp_source.html  EngineRenderingAPI_8hpp_source.html  EngineWindowAPI_8hpp_source.html  Engine_8hpp_source.html  EntityObject_8hpp_source.html  EntityXMLParser_8hpp_source.html  FrameCounter_8h_source.html  GameTime_8h_source.html  Game_8hpp_source.html  GlobalObjects_8hpp_source.html  HealthComponent_8hpp_source.html  Input_8hpp_source.html  InventoryComponent_8hpp_source.html  InventoryItem_8hpp_source.html  LevelBase_8hpp_source.html  LevelParserAPI_8hpp_source.html  MenuParserAPI_8hpp_source.html  MenuParser_8hpp_source.html  NextLevelComponent_8hpp_source.html  ObjectLoader_8hpp_source.html  PhysicsAPI_8hpp_source.html  PhysicsComponent_8hpp_source.html  RTransform_8hpp_source.html  RenderComponent_8hpp_source.html  SDLAudioEngineAdapter_8hpp_source.html  SDLInputEngineAdapter_8hpp_source.html  SDLRenderingAdapter_8hpp_source.html  TMXLevel_8hpp_source.html  TransformComponent_8hpp_source.html  Vector2_8hpp_source.html  WeaponComponent_8hpp_source.html  WindowAPI_8hpp_source.html  _audio_a_p_i_8h.html  (+437 more)
latex/: annotated.tex  classAudioAPI.eps  classAudioAPI.tex  classAudioEngineAdapter.eps  classAudioEngineAdapter.tex  classBodyHandler.tex  classBodyHandlerAPI.tex  classBox2DBoxData.eps  classBox2DBoxData.tex  classBox2DCircleData.eps  classBox2DCircleData.tex  classBox2DData.eps  classBox2DData.tex  classBox2DPhysicsEngineAdapter.eps  classBox2DPhysicsEngineAdapter.tex  classBox2DPolygonData.eps  classBox2DPolygonData.tex  classBox2dDrawDebug.eps  classBox2dDrawDebug.tex  classBulletComponent.eps  classBulletComponent.tex  classCharacterComponent.eps  classCharacterComponent.tex  classCommon_1_1alpha.eps  classCommon_1_1alpha.tex  classCommon_1_1baseResources.eps  classCommon_1_1baseResources.tex  classCommon_1_1color.eps  classCommon_1_1color.tex  classCommon_1_1events.eps  classCommon_1_1events.tex  classCommon_1_1font.eps  classCommon_1_1font.tex  classCommon_1_1onAttack.eps  classCommon_1_1onAttack.tex  classCommon_1_1onAttacked.eps  classCommon_1_1onAttacked.tex  classCommon_1_1onClick.eps  classCommon_1_1onClick.tex  classCommon_1_1onDestroyed.eps  (+343 more)
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_13.js  classes_14.js  classes_15.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  (+100 more)
(+230 files in other folders)
